# switchboard

./: .dockerignore  .env.example  .env.production.example  .gitattributes  .gitignore  .gitleaks.toml  Dockerfile  Dockerfile.bridge  LICENSE  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.qa-override.yml  docker-compose.yml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  prisma.config.ts
.githooks/: pre-push  pre-push.mjs
.github/workflows/: ci.yml
prisma/: schema.prisma  seed.ts
public/: manifest.json  sw.js
scripts/: deploy-with-ssh.sh  deploy.sh  start.sh  stop.sh  switchboard-tunnel.sh  voip-call-stack.sh
scripts/deploy/: deploy.sh  generate-secrets.mjs  generate-secrets.sh  nginx.conf.example  post-deploy-verify.mjs  preflight-check.mjs
scripts/dev/: create-multiple-users.ts  create-user.ts
services/telegram-voip-gateway/: README.md  package.json  tsconfig.json
services/telegram-voip-gateway/helper/: README.md  pyproject.toml
services/telegram-voip-gateway/helper/switchboard_voip_helper/: __init__.py  audio.py  call_manager.py  config.py  server.py  session_convert.py
services/telegram-voip-gateway/helper/tests/: test_audio.py  test_session_convert.py
src/: middleware.ts
src/app/: globals.css  layout.tsx  not-found.tsx
src/hooks/: use-group-rename-listener.ts  use-sse.ts  use-toast.tsx  use-typing-indicator.ts  useRealTimeChat.ts
src/lib/: account-visibility.ts  client-errors.ts  db.ts  logger.ts  rate-limit.ts  utils.ts
src/types/: opencc-js.d.ts
workers/: telegram-bridge.ts
(+218 files in other folders)
